# virocon

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml  requirements.txt
.github/workflows/: continuous_integration.yml  ruff.yml
dev-info/: README.md
docs/: install.rst
tests/: test_predefined.py  test_workflows.py
virocon/: _fitting.py  _intersection.py  contours.py  dependencies.py  distributions.py  jointmodels.py  plotting.py  predefined.py  utils.py
